css/styles.css
/* ... */
.main-nav li ul li a {
  color: var(--white);
  width: 100%;
}

.hamburger {
  display: none;
}

#menu-toggle {
  display: none;
}

#menu-toggle:checked + #navigation {
    display: flex;
}

/* ------- Buttons ------- */

/* button style from https://codepen.io/archivum/pen/NPPOaj */
.btn-6 {
  color: var(--orange);
  background: var(--white);
  -webkit-transition: none;
  -moz-transition: none;
  transition: none;
  height: 40px;
  min-width: 100px;
  line-height: 24px;
  font-size: 14px;
  font-weight: 600;
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
}

.btn-6:active {
  top: 2px;
}

/* Button 6a */
.btn-6a {
  border: 4px solid var(--orange);
  background-color: var(--orange);
  border-radius: 6px;
  color: var(--white);
  width: 100%;
}

.btn-6a:hover,
.btn-6a:focus-within {
  background: transparent;
  border-color: var(--orange);
  color: var(--orange);
}

/* Button 6b */
.btn-6b {
  border: 4px solid var(--white);
  border-radius: 6px;
}

.btn-6b:hover,
.btn-6b:focus-within {
  background: transparent;
  border-color: var(--orange);
  color: var(--white);
}

/* Button 6b inverted color */
.btn-6b-inverse {
  border: 4px solid var(--white);
  background-color: var(--white);
  border-radius: 6px;
  color: var(--orange);
  min-width: 140px;
}

.btn-6b-inverse:hover,
.btn-6b-inverse:focus-within {
  background: transparent;
  border-color: var(--orange);
  color: var(--white);
}

.btn-6b:active,
.btn-6b-inverse:active {
  background: var(--orange);
  color: var(--white);
}

.btn-6a:active {
  background: var(--darkBlue);
  border-color: var(--darkBlue);
  color: var(--white);
}

/* ------- Location & Main content ------- */

.content-img img {
  min-width: 400px;
  max-width: 100%;
  height: auto;
  padding: 12px 12px 0 12px;
}

.service {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.serviceTime {
  align-self: center;
  font-size: 3em;
  width: 200px;
}

.directions-btn {
  min-width: 18em;
  align-self: bottom;
}

.visit-ministry-content {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.visit-ministry-content__classes ul li {
  list-style: none;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  padding: 1em 0;
}

.main-classes {
  text-align: center;
}

.mission-bottom-slogan {
  margin-top: 4em;
}

.affiliation-images {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-gap: 2em;
}

.affiliation-images img {
  background-color: var(--white);
  width: 100%;
  object-fit: contain;
  object-position: 0 50%;
}

.affiliation-images .white-logo {
  background-color: var(--logo);
}

.register {
  margin: 5em 10em;
}
.register button {
  padding: 1.5em;
  display: flex;
  align-items: center;
  justify-content: center;
}

.register a,
.group-links a {
  text-decoration: none;
}

.group-links {
  margin: 2em 0;
  width: 20em;
}

.main-groups {
  display:grid;
  grid-template-columns: 1fr;
}

.group-text {
  grid-area: group-text;
}

.group-links {
  grid-area: group-links;
}

.group-image {
  grid-area: group-image;
}

.group-content {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-areas:
  "group-text group-image"
  "group-links group-image";
  width: 100%;
}

.group-image img {
  width: 25em;
  height: 15em;
  object-fit: cover;
  object-position: 0 50%;
}


.ministry__image img {
  min-width: 20em;
  height: 15em;
  padding: 12px 0;
  object-fit: cover;
  object-position: 0 50%;
}

.ministry__social-media {
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-columns: 1fr 1fr;
  margin: 5em auto 0 auto;
  text-align:center;
  width: 20em;
}

.ministry__social-media img {
  width: 4em;
}

/* ------- LEADERS ------- */

.leaders {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 4em;
  margin-top: 5em;
  text-align: center;
}

.leadership-board {
  margin: 5em 6em 0 6em;
  text-align: center;
}

.leader h4,
.leadership-board h4 {
  margin: 1.67em 0;
  padding: 0;
}

.leader h5,
.leadership-board h5 {
  font-weight: 400;
}

.leader img {
  max-width: 15em;
  max-height: 15em;
  object-fit: cover;
  border-radius: 50%;
  -webkit-box-shadow: 0px 8px 20px 0px rgba(214,214,214,1);
  -moz-box-shadow: 0px 8px 20px 0px rgba(214,214,214,1);
  box-shadow: 0px 8px 20px 0px rgba(214,214,214,1);
}

.leadership-board img {
  max-width: 100%;
  max-height: 25em;
  object-fit: cover;
}

.leader img:hover,
.leader img:focus-within {
  filter: alpha(opacity=80);
    opacity: 0.8;
}

/* -------  APP PROMOTION  ------- */

.app-promo {
  display: grid;
  grid-template-columns: 3fr 4fr;
  grid-gap: 4em;
  justify-content: center;
  grid-template-areas: 
  "promo-img promo-sum";
}

.app-promo__image img {
  width: 200px;
}

.download-links img {
  width: 135px;
}


/* ------- Footer ------- */

.footer a,
.copyright {
  font-family: 'Open Sans', sans-serif;
  text-decoration: none;
}

.footer a {
  color: var(--darkBlue);
}

.footer-logo a,
.return-to-top a {
  font-size: 1.12em;
  font-weight: 700;
}

.footer-nav a,
.bottom-bar {
  font-size: 12px;
  text-transform: uppercase;
}

.return-to-top a {
  display: flex;
  justify-content: flex-end;
}

.return-to-top img{
  width: 2em;
}

.copyright {
  color: var(--white);
}

.footer-nav ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  list-style: none;
  grid-gap: 5px 2em;
}

.social-links {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: flex-end;
}

.social-links a {
  display: flex;
  justify-content: flex-end;
}

.social-links img {
  width: 1.25em;
}
/* ... */

